# small-cap-picker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TASKS.md  pyproject.toml
config/: decisions_log.yaml  portfolio.yaml  watchlist.yaml
data/: decisions_log.yaml  portfolio.yaml  system_insights.yaml
docs/: ARCHITECTURE.md  PHILOSOPHY.md
prompts/: CORE_RULES.md  RESPONSE_RULES.md
prompts/agents/: 01_prescreener.md  02a_fundamental.md  02b_technical.md  02c_sentiment.md  02d_ownership.md  04a_bull.md  04a_bull_synthesizer.md  04b_bear.md  04b_bear_synthesizer.md  04c_premortem.md  04c_premortem_synthesizer.md  05_portfolio_manager.md
prompts/system/: feedback_loop.md
src/layer0_ideas/: aggregator.py  insider_buying.py  screener.py
src/layer1_prescreener/: agent.py  main.py
src/layer2_analysis/: agents.py  main.py
src/layer3_selector/: main.py  weights.py
src/layer4_cases/: agents.py  main.py
src/layer5_portfolio_manager/: context_builder.py  main.py
src/layer6_feedback/: feedback_agent.py  insights_updater.py  main.py
src/pipeline/: main.py  orchestrator.py
src/shared/: config_loader.py  context.py  llm_client.py  logger.py  logging_config.py  market_data.py
